--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,10 @@ main {
 	width: 100%;
 }
 
+img {
+	max-width: 100%;
+}
+
 /*Style Rules for footer*/
 footer p
 
@@ -79,14 +83,6 @@ footer p a {
     color: #fff;
     text-decoration: none;
 }
-
-/* Desktop Viewport: Style rules for nav area */
-    nav {
-        float: right;
-        width: 70%;
-        margin: 4em 1em 0 0;
-    }
-
 
     /* Desktop Viewport: Style Rules for main content */
     main {
